feat: 회원 서비스 기능 추가
chore: 테스트 프로필 설정 추가
feat: MemberRepository 추가
feat: 회원 등록 기능 추가
feat: 회원 조회 기능 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,3 +34,21 @@ spring:
 logging:
   level:
     org.hibernate.sql: debug
+
+---
+spring:
+  config:
+    activate:
+      on-profile: test
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
+  sql:
+    init:
+      mode: never # test 환경에선 직접 데이터를 추가하기 때문에 데이터 초기화가 필요 없다.
