--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,10 @@ dependencies {
     // h2
     runtimeOnly 'com.h2database:h2'
 
+    // MapStruct
+    implementation("org.mapstruct:mapstruct:1.5.5.Final")
+    annotationProcessor("org.mapstruct:mapstruct-processor:1.5.5.Final")
+
     // test
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
